--- a/WebSG/pages/pages/projects/home.html
+++ b/WebSG/pages/pages/projects/home.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="../../../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../../../assets/img/Group3.png">
+  <link rel="icon" type="image/png" href="../../../assets/img/sou_gerente_mini.png">
+
   <title>
     SOU Gerente | Home
   </title>
@@ -29,9 +29,8 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href="../../../pages/pages/projects/home.html">
-        <img src="../../../assets/img/Group3.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold">SOU Gerente</span>
+      <a class="m-0" href="../../../pages/pages/projects/home.html">
+        <img src="../../../assets/img/sou_gerente_logo1.png" alt="main_logo" style="height: 6rem;  margin-top: -5%;">
       </a>
     </div>
     <hr class="horizontal dark mt-0">
