--- a/WebSG/pages/pages/projects/novo_usario.html
+++ b/WebSG/pages/pages/projects/novo_usario.html
@@ -164,6 +164,11 @@
                   <span class="sidenav-normal"> Departamento</span>
                 </a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link " href="../../../pages/pages/projects/agenda.html">
+                  <span class="sidenav-normal">Vincular Tarefas</span>
+                </a>
+              </li>
             </ul>
           </div>
         </li>
